--- a/langs/fble.compile.txt
+++ b/langs/fble.compile.txt
@@ -112,9 +112,16 @@ FbleLocalIndexV dests;
 FbleInstrBlock* code;
 
 Notes
-* exit could be incorportated into tag
-* args is a vector for struct, otherwise it could be 2.
+* exit could be incorporated into tag
+* args is a vector for struct and scope, otherwise it could be 2.
 * dests is a vector for fork, otherwise it could be 1.
 * code could be a pc in theory, if all the instructions were saved into one
-  big array.
+  big array. Though I guess we would need some other way to initialize the
+  locals memory.
+
+---
+It looks like llvm has a tailcc calling convention that can be used to support
+tail calls. Good.
+
+It doesn't look like llvm has any general support for multithreading.
 
