Fix bad uses of FbleValueRetain.
There were a couple uses of FbleValueRetain that should be FbleValueRefAdd.
Fixed those.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
+
+* [gc] Debug process-fail test.
+
 * [eval] gprof profiling based improvements.
   - Little things that are cleanup are worth doing.
   - Things the compiler could easily fix itself are not worth doing if they
