Give preference to traversing pending objects over roots.
In the hopes that roots can be freed earlier that way if they are dropped.

fble bench max memory: 12418003 -> 12060959

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,8 @@
 
+* [test] Figure out how to be more lenient in memory growth tests
+ - So that the mark sweep collector, which does work as intended (I'm pretty
+   sure), can satisfy those tests.
+
 * [eval] gprof profiling based improvements.
   - Little things that are cleanup are worth doing.
   - Things the compiler could easily fix itself are not worth doing if they
