--- a/langs/fble.gc.txt
+++ b/langs/fble.gc.txt
@@ -454,3 +454,34 @@ Other thoughts:
   if you're happy with that behavior, you may as well be happy with just mark
   sweep, no?
 
+---
+
+We can reduce object collection lag, lower memory overhead, and potentially
+improve performance a slight amount with improved locality by implementing a
+fairly straight forward generational garbage collection.
+
+The idea is this: 
+* When you do GC, only traverse and collect objects from recent generations.
+* Survivors of the latest GC are grouped together into the latest generation.
+* Keep track during New/Retain/Release/Add/Del how many generations back you
+  have to traverse in the next GC.
+
+The hope is that for the most part you only have to traverse a few
+generations, so you can finish traversing much faster and avoid traversing
+(and thus smashing the cache) the bulk of the objects on the heap. Note that
+this isn't an approximation of garbage collection. If we don't traverse an
+older generation, it's because we know for certain that it wouldn't make a
+difference to traverse the older generation.
+
+It don't expect the runtime performance of GC to change much. That's tied to
+how much traversal you do per allocation, not how long it takes to go through
+the heap. But it should reduce collection lag a lot, which will reduce memory
+overhead. And potentially it would allow us to lower the traversal rate, which
+would improve performance.
+
+I do have this fear that something like routine putting objects on a link will
+force full GC pretty often. Because once you do a full GC, everything is
+lumped into the same generation. If one of those objects is a link, than any
+time we put something onto the link we'll have to do a full GC, and there's no
+way to get out of it.
+
