Switch to mark sweep heap for types.
This requires that all types are properly initialized before allocating new
types, otherwise we could crash in gc by traversing types with uninitialized
fields.

Removed monoid.tcl regression test, because I don't think it generalizes to
other gc implementations, and it only covers one of many places where we
failed to properly initialize types. Sadly, I can't think of a decent way to
add regression tests for this.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 
-* [compile] figure out bug when using mark sweep gc with types.
+* [compile] make sure types are not constructed incrementally
+ - otherwise gc could end up traversing garbage.
 * [eval] replace all uses of rc-heap with ms-heap.
+* [type] Inline fields and args data into FbleType objects?
 
 * [eval] gprof profiling based improvements.
   - Little things that are cleanup are worth doing.
