--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
 
 * [eval] Use native stack
- - Add thread support.
+ - fix thread support.
+
+* [eval] Any way to abstract the thread API away?
+ - In other words, ideally there are no references to pthreads in eval.c
 
 * [profile] Remove special block 0
  - Add block data at the profile level representing 'total' and special case
